# python-monorepo

./: .gitpod.yml  pyproject.toml
