[tool.poetry]
name = "python-monorepo"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <ckcarlosdesign@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"

# poetry add git+https://github.com/ElSnoMan/pyclinic.git#main
# poetry remove pyclinic
pyclinic = {git = "https://github.com/ElSnoMan/pyclinic.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
